# IronLungThree

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Blueprint  CHANGELOG.md  COMPACT-GUIDE.md  CONTRIBUTING.md  IRONLUNG3-BLUEPRINT-v3.md  IRONLUNG3-PHASE1-BUILD-SPEC.md  README.md  USER_EXPERIENCE_REPORT.md  ironlung3.bat  ironlung3.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  update.bat  update.py
.github/workflows/: ci.yml  phase1-foundation.yml
data/: sample_contacts.csv
data/backups/: .gitkeep
data/style_examples/: .gitkeep
docs/: ARCHITECTURE-OVERVIEW.md  BUILD-SEQUENCE.md  GLOSSARY.md  GUI_IMPLEMENTATION_SUMMARY.md  GUI_MANUAL_TEST.md  GUI_STRUCTURE.md  PHASE1-CHECKLIST.md  REPO-GRADE.md  SCAFFOLDING-PLAN.md  SCHEMA-SPEC.md
docs/adr/: 001-sqlite-over-postgres.md  002-tkinter-over-electron.md  003-polling-over-webhooks.md  004-notes-as-memory.md  005-dual-cadence-system.md
docs/layers/: LAYER-1-SLAB.md  LAYER-2-PIPES.md  LAYER-3-ENGINE.md  LAYER-4-FACE.md  LAYER-5-BRAIN.md  LAYER-6-HEARTBEAT.md  LAYER-7-SOUL.md
docs/patterns/: CONFIG.md  ERROR-HANDLING.md  LOGGING.md  TESTING.md
scripts/: create_shortcut.ps1  seed_demo_data.py  smoke_phase1.sh
src/: __init__.py
src/ai/: __init__.py  anne.py  card_story.py  claude_client.py  contact_analyzer.py  copilot.py  disposition.py  insights.py  parser.py  proactive_interrogation.py  rescue.py  style_learner.py
src/autonomous/: __init__.py  activity_capture.py  email_sync.py  nightly.py  orchestrator.py  reply_monitor.py  scheduler.py
src/content/: __init__.py  daily_cockpit.py  eod_summary.py  morning_brief.py
src/core/: __init__.py  config.py  exceptions.py  feedback.py  logging.py  phone.py  security.py  services.py  setup_wizard.py  tasks.py  updater.py
src/db/: __init__.py  backup.py  database.py  intake.py  models.py
src/engine/: __init__.py  cadence.py  call_session.py  contract_gen.py  demo_invite.py  demo_prep.py  email_gen.py  email_recall.py  email_service.py  engagement_velocity.py  export.py  groundskeeper.py  intel_extract.py  intel_gaps.py  intervention.py  learning.py  nurture.py  populations.py  research.py  resurrection.py  scoring.py  templates.py  troubled_cards.py
src/gui/: __init__.py  app.py  cards.py  dictation_bar.py  install_wizard.py  service_guard.py  shortcuts.py  theme.py
tests/: __init__.py  conftest.py
(+141 files in other folders)
